--- a/AjuNews/neymar-selecao.html
+++ b/AjuNews/neymar-selecao.html
@@ -51,6 +51,8 @@
         <a href="#">Cultura</a>
         <a href="#">Carros</a>
         <a href="#">Música</a>
+        <a href="#">Tiktokers</a>
+        <a href="#">Podcasts</a>
     </nav>
 
     <header>
@@ -88,7 +90,7 @@
             <article>
                 <h1 class="titulo-artigo">Fã de Neymar Comete Suicídio Após Não Convocação para a Seleção</h1>
                 <img class="imagem-artigo" src="assets/neymar.jpg" alt="Neymar selecao">
-                <p class="autor">Por: Chico</p>
+                <p class="autor">Por: João Francisco</p>
 
                 <div class="conteudo-noticia">
                     <p>A comunidade esportiva foi abalada por uma notícia trágica nesta semana. Uma jovem torcedora de 18 anos, identificada como Maria de Oliveira, tirou a própria vida após a não convocação de Neymar para os próximos jogos da Seleção Brasileira. Familiares e amigos relatam que Maria era uma grande fã do jogador e demonstrava uma devoção acima do comum, o que pode ter levado a esse final lamentável. A notícia levanta discussões sobre o culto a celebridades e a saúde mental de jovens nas redes sociais.</p>
@@ -99,7 +101,7 @@
         </main>
 
         <aside class="anuncios">
-            <a href="https://www.kto.bet" target="_blank"><img src="assets/tigrinho.webp" alt="Anúncio 1"></a>
+            <a href="https://tigrinho.io/" target="_blank"><img src="assets/tigrinho.webp" alt="Anúncio 1"></a>
             <a href="https://www.garoto.com.br/baton" target="_blank"><img src="assets/batom.jpg" alt="Anúncio 2"></a>
             <a href="https://www.unit.br/" target="_blank"><img src="assets/unit.png" alt="Anúncio 3"></a>
             <a href="https://www.mcdonalds.com.br/" target="_blank"><img src="assets/mcdonalds.png" alt="Anúncio 4"></a>
