--- a/AjuNews/minerva-violencia.html
+++ b/AjuNews/minerva-violencia.html
@@ -51,6 +51,8 @@
         <a href="#">Cultura</a>
         <a href="#">Carros</a>
         <a href="#">Música</a>
+        <a href="#">Tiktokers</a>
+        <a href="#">Podcasts</a>
     </nav>
 
     <header>
@@ -99,7 +101,7 @@
         </main>
 
         <aside class="anuncios">
-            <a href="https://www.kto.bet" target="_blank"><img src="assets/tigrinho.webp" alt="Anúncio 1"></a>
+            <a href="https://tigrinho.io/" target="_blank"><img src="assets/tigrinho.webp" alt="Anúncio 1"></a>
             <a href="https://www.garoto.com.br/baton" target="_blank"><img src="assets/batom.jpg" alt="Anúncio 2"></a>
             <a href="https://www.unit.br/" target="_blank"><img src="assets/unit.png" alt="Anúncio 3"></a>
             <a href="https://www.mcdonalds.com.br/" target="_blank"><img src="assets/mcdonalds.png" alt="Anúncio 4"></a>
